# VIRUP-mirror

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  KNOWN_BUGS  LICENSE  README-HYDROGENVR.md  README.md  TRANSFORMS  build-linux.sh  build.conf  build.conf.example  debug-linux.sh  profile-linux.sh  run-linux.sh  update-hydrogenvr.sh
ci/: clang-format-report.sh  clang-tidy-report.sh  doc-report.sh
ci/appveyor/: deploy.bat  install.bat  install_dependencies.bat
ci/gitlab-ci/commons/: checkcode.sh  install_dependencies.sh  main_build.sh  test_deb.sh
cmake/: ClangDevTools.cmake  CopyQt5Deps.cmake  Doc.cmake  WindowsCopyFiles.cmake
cmake/modules/: FindClangFormat.cmake  FindClangTidy.cmake  FindLeapMotion.cmake  FindOpenVR.cmake  FindPythonQt.cmake  FindPythonQt_QtAll.cmake
data/core/shaders/: billboard.frag  billboard.vert  bloom.comp  bloom.frag  blur.comp  blur.frag  colors.comp  colors.frag  controllers.vert  default.frag  default.vert  domemaster180.frag  exposure.comp  exposure.frag  hiddenarea.frag  hiddenarea.vert  highlumpass.comp  highlumpass.frag  model.frag  model.vert  panorama360.frag  shadow.frag  shadow.vert  shadows.glsl  skybox.frag  skybox.vert  texturedebug.frag
data/example/shaders/: grayscale.frag
data/shaders/: controllers.frag  default.frag  distort.frag  gamma.frag  invsq.frag  invsq.vert  postprocess.vert
data/virup/shaders/: colored.frag  colored.vert  detailedstar.frag  detailedstar.vert  gaz.frag  gaz.vert  star.vert  texture.frag
doc/: Doxyfile.in  DoxygenLayout.xml
example/ci/appveyor/: before_archiving.bat  install.bat  install_dependencies.bat
example/ci/gitlab-ci/: install_dependencies.sh
example/ci/travis/: install.sh
example/cmake/: Dependencies.cmake  Install.cmake
example/data/shaders/: colorpervert.frag  colorpervert.vert  distort.comp  grayscale.comp
example/include/: InputManager.hpp  Launcher.hpp  MainWin.hpp
example/scripts/: main.py
example/src/: Launcher.cpp  MainWin.cpp
example/test/: TestExample.hpp  test_main.hpp
include/: AbstractLibrary.hpp  AbstractMainWin.hpp  AbstractState.hpp  AssetLoader.hpp  AsyncMesh.hpp  AsyncTexture.hpp  BaseInputManager.hpp  BaseLauncher.hpp  BasicCamera.hpp  Billboard.hpp  CalibrationCompass.hpp  Camera.hpp  DebugCamera.hpp  GLHandler.hpp  Launcher.hpp  Light.hpp  Logger.hpp  MainRenderTarget.hpp  MainWin.hpp  Model.hpp  NetworkManager.hpp  Primitives.hpp  PythonQtHandler.hpp  Renderer.hpp  SettingsWidget.hpp  ShaderProgram.hpp  Text3D.hpp  ToneMappingModel.hpp  Widget3D.hpp  doxygen_groups.hpp  profiling.hpp  utils.hpp
include/exceptions/: Exceptions.hpp  Exceptions_default.hpp  Exceptions_unix.hpp
include/gl/: GLBuffer.hpp  GLComputeShader.hpp  GLFramebufferObject.hpp  GLHandler.hpp  GLMesh.hpp  GLPixelBufferObject.hpp  GLShaderProgram.hpp  GLTexture.hpp
include/graphics/renderers/: CelestialBodyRenderer.hpp  DetailedPlanetRenderer.hpp
include/math/: DeterministicRandomFloat.hpp  Matrix4x4.hpp  Vector4.hpp
include/methods/: BaseLineMethod.hpp  BaseLineMethodTex.hpp  Method.hpp  OctreeLOD.hpp  PIDController.hpp  TreeMethodLOD.hpp  TreeMethodTex.hpp
include/movingcube/: MovingCube.hpp
include/physics/: CSVOrbit.hpp  Orbit.hpp  Orbitable.hpp  OrbitalSystem.hpp  Planet.hpp  Star.hpp  UniversalTime.hpp
include/physics/default-orbitalsystems/: KerbalSystem.hpp  SolarSystem.hpp
include/vr/: Controller.hpp  Hand.hpp  OpenVRHandler.hpp  StereoBeamerHandler.hpp  VRHandler.hpp
innosetup/: config.iss
misc/: PythonQt.prf  PythonQt.pro  PythonQt_QtAll.prf  kill-leapd.sh  python.prf  update-dependencies.sh
src/: AbstractMainWin.cpp  AssetLoader.cpp  AsyncMesh.cpp  AsyncTexture.cpp  BaseInputManager.cpp  BaseLauncher.cpp  BasicCamera.cpp  Billboard.cpp  CalibrationCompass.cpp  Camera.cpp  DebugCamera.cpp  GLHandler.cpp  Launcher.cpp  Light.cpp  Logger.cpp  MainWin.cpp  Model.cpp  NetworkManager.cpp  Primitives.cpp  PythonQtHandler.cpp  Renderer.cpp  SettingsWidget.cpp  ShaderProgram.cpp  Text3D.cpp  ToneMappingModel.cpp  Widget3D.cpp  main.cpp  profiling.cpp  utils.cpp
src/gl/: GLBuffer.cpp  GLComputeShader.cpp  GLFramebufferObject.cpp  GLHandler.cpp  GLMesh.cpp  GLPixelBufferObject.cpp  GLShaderProgram.cpp  GLTexture.cpp
src/graphics/: Utils.cpp
src/graphics/renderers/: OrbitalSystemRenderer.cpp  Rings.cpp  StarRenderer.cpp
src/math/: CoordinateSystem.cpp  DeterministicRandomFloat.cpp  EccentricAnomalySolver.cpp  Matrix4x4.cpp  Vector4.cpp
src/methods/: BaseLineMethod.cpp  BaseLineMethodTex.cpp  Method.cpp  OctreeLOD.cpp  PIDController.cpp  TreeMethodLOD.cpp  TreeMethodTex.cpp
src/movingcube/: MovingCube.cpp
src/physics/: CSVOrbit.cpp  Color.cpp  Orbitable.cpp  OrbitalSystem.cpp
src/physics/default-orbitalsystems/: KerbalSystem.cpp  SolarSystem.cpp
src/vr/: Controller.cpp  Hand.cpp  OpenVRHandler.cpp  StereoBeamerHandler.cpp  VRHandler.cpp
test/: main.cpp
translations/: HydrogenVR_fr.qm  HydrogenVR_fr.ts
virup/ci/appveyor/: install.bat  install_dependencies.bat
virup/ci/gitlab-ci/: install_dependencies.sh
virup/ci/travis/: install.sh
virup/cmake/: Dependencies.cmake  Install.cmake
virup/cmake/modules/: FindOctree.cmake
virup/data/scripts/: main.py
virup/data/shaders/: galaxies.frag  galaxies.vert  invsq.frag  invsq.vert  lensing.comp  lensing.frag  raymarch.glsl  star.frag  stars.frag  stars.vert  volume.frag  volume.vert
virup/include/: CSVObjects.hpp  Camera.hpp  Camera.hpp.old  CameraTreeLOD.hpp  CosmologicalSimulation.hpp  Grid.hpp  InputManager.hpp  Launcher.hpp  MainWin.hpp  MovementControls.hpp  UniverseElement.hpp  VIRUPSettings.hpp  VolumetricModel.hpp  blackbody.hpp
virup/include/methods/: BaseLineMethod.hpp  BaseLineMethodTex.hpp  Method.hpp  OctreeLOD.hpp  TreeMethodLOD.hpp  (+1 more)
virup/src/: CSVObjects.cpp  Camera.cpp  Camera.cpp.old  CameraTreeLOD.cpp  CosmologicalSimulation.cpp  Grid.cpp  InputManager.cpp  Launcher.cpp  MainWin.cpp  MovementControls.cpp  UniverseElement.cpp  VIRUPSettings.cpp  VolumetricModel.cpp
virup/test/: TestExample.hpp
(+35 files in other folders)
